all add this header

--- a/creative_toy.html
+++ b/creative_toy.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-      <!-- Header start -->
+       <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -77,20 +77,20 @@
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item"
-                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
+                                                        href="all_product.html">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
+                                                    <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
+                                                    <a class="dropdown-item" href="all_product.html">
                                                         Building Blocks
                                                     </a>
                                                 </li>
@@ -114,14 +114,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8">
+                                                    <a class="dropdown-item" href="all_product.html">
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item"
-                                                        href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
+                                                        href="all_product.html">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -129,7 +129,7 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
+                        <li class="nav-item"><a href="all_product.html" class="nav-link">Birthday
                                 Gifts</a></li>
                         <li class="nav-item"><a href="all_product.html" class="nav-link">All Product
                             </a></li>
@@ -198,7 +198,7 @@
                     </a>
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
-                <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
+                <li><a href="all_product.html">Birthday Gifts</a></li>
                 <li><a href="all_product.html">All Product</a></li>
             </ul>
         </div>
@@ -226,13 +226,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="toys-games.html#v-pills-settings1">Musical Toy</a></li>
-                <li><a href="toys-games.html#v-pills-settings2">Puzzle Game</a></li>
-                <li><a href="toys-games.html#v-pills-settings3">Building Blocks</a></li>
+                <li><a href="all_product.html">Musical Toy</a></li>
+                <li><a href="all_product.html">Puzzle Game</a></li>
+                <li><a href="all_product.html">Building Blocks</a></li>
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
-                <li><a href="toys-games.html#v-pills-settings8">Baby Toy</a></li>
-                <li><a href="toys-games.html#v-pills-settings9">Outdoor Toy</a></li>
+                <li><a href="all_product.html">Baby Toy</a></li>
+                <li><a href="all_product.html">Outdoor Toy</a></li>
             </ul>
         </div>
     </div>
@@ -488,13 +488,13 @@
     <!-- Creative end -->
 
 
-      <!-- footer start -->
+   <!-- footer start -->
    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"  loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
@@ -519,24 +519,24 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="toys-games.html#v-pills-settings1">Musical Toy</a> </li>
+                                    <li> <a href="all_product.html">Musical Toy</a> </li>
 
-                                    <li> <a href="toys-games.html#v-pills-settings2"> Puzzle Game </a> </li>
+                                    <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="toys-games.html#v-pills-settings3"> Building Blocks </a> </li>
+                                <li> <a href="all_product.html"> Building Blocks </a> </li>
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
                                 <li> <a href="toys-games.html#v-pills-settings7"> Creative Toy </a></li>
 
-                                <li> <a href="toys-games.html#v-pills-settings8"> Baby Toy</a></li>
+                                <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="toys-games.html#v-pills-settings9">Outdoor Toy</a> </li>
+                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
                             </ul>
                         </div>
                     </div>
