all add this alpha

--- a/all_product.html
+++ b/all_product.html
@@ -538,6 +538,19 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F301/B1.jpg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Alpha Numeric Puzzle Game</h5>
+                                    <p class="card-text">Learn letters, numbers with colorful sticks for fun educational play.</p>
+                                    <h4><b>₹ 249</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="alpha_numeric.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- </div>
