all add this price

--- a/all_product.html
+++ b/all_product.html
@@ -310,7 +310,7 @@
                                     <h5 class="card-title">Memory Chess Board Game</h5>
                                     <p class="card-text">Improves memory, focus, strategy, thinking, and visual
                                         recognition skills.</p>
-                                    <h4><b>₹ 349</b></h4>
+                                    <h4><b>₹ 249</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="memory_chess.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -394,7 +394,7 @@
                                     <h5 class="card-title">Alpha Numeric Construction Puzzle</h5>
                                     <p class="card-text">Builds logic, recognition, motor skills, and fun with
                                         alphanumeric blocks.</p>
-                                    <h4><b>₹ 299</b></h4>
+                                    <h4><b>₹ 349</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="alpha_numeric_puzzle.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -548,6 +548,19 @@
                                     <h4><b>₹ 249</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="alpha_numeric.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F704/1.jpeg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Wooden Russian Blocks Puzzles</h5>
+                                    <p class="card-text">Colorful wooden blocks boost logic, creativity, focus, and fun.</p>
+                                    <h4><b>₹ 199</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="wooden_russian_blocks.html" class="btn btn-primary">Buy Now</a>
                                 </div>
                             </div>
                         </div>
