--- a/toys-games.html
+++ b/toys-games.html
@@ -410,10 +410,10 @@
                                         <img src="./assets/img/Products img/Edited/F300/education_6.jpeg"
                                             class="card-img-top" alt="product-img" loading="lazy">
                                         <div class="card-body">
-                                            <h5 class="card-title">Wooden Alphabet,Number</h5>
+                                            <h5 class="card-title">Alpha Numeric  Puzzle</h5>
                                             <p class="card-text">Colorful wooden blocks with alphabets for early
                                                 learning.</p>
-                                            <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 349</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="alpha_numeric_puzzle.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -565,7 +565,7 @@
                                             <h5 class="card-title">Memory Chess Board Game</h5>
                                             <p class="card-text">Colorful memory game to boost focus, recall, and fun
                                                 learning.</p>
-                                            <h4><b>₹ 349</b></h4>
+                                            <h4><b>₹ 249</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="memory_chess.html" class="btn btn-primary">Buy Now</a>
                                         </div>
