--- a/toys-games.html
+++ b/toys-games.html
@@ -410,7 +410,7 @@
                                         <img src="./assets/img/Products img/Edited/F300/education_6.jpeg"
                                             class="card-img-top" alt="product-img" loading="lazy">
                                         <div class="card-body">
-                                            <h5 class="card-title">Alpha Numeric  Puzzle</h5>
+                                            <h5 class="card-title">3 Set of Puzzle Geomatery | Alphabate | Number board puzzle</h5>
                                             <p class="card-text">Colorful wooden blocks with alphabets for early
                                                 learning.</p>
                                             <h4><b>₹ 349</b></h4>
