--- a/alpha_numeric_puzzle.html
+++ b/alpha_numeric_puzzle.html
@@ -244,7 +244,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Alpha Numeric Construction Puzzle</a></b></h2>
+                    <h2 class="pt-5"><b><a href="toys-games.html">3 Set of Puzzle Geomatery | Alphabate | Number board puzzle</a></b></h2>
                 </div>
             </div>
             <div class="row">
@@ -266,7 +266,7 @@
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4 mb-3">
-                        <h4><b>Alpha Numeric Construction Puzzle</b></h4>
+                        <h4><b>3 Set of Puzzle Geomatery | Alphabate | Number board puzzle</b></h4>
                         <h3><b>₹ 349</b></h3>
                         <span>Free Delivery</span>
                         <div class="text-center mt-4">
