all add this a footer

--- a/snowflake_building.html
+++ b/snowflake_building.html
@@ -175,159 +175,7 @@
             </div>
         </div>
     </header>
-   <!-- Header start -->
-    <header class="sticky-top bg-white">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-auto d-block d-md-none">
-                    <button class="nav-button" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                        <i class="fa-solid fa-bars"></i>
-                    </button>
-                </div>
-                <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
-                            loading="lazy" class="img-fluid"></a>
-                </div>
-                <div class="col-auto mx-auto d-none d-md-block">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about_us.html">About Us</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="toys-games.html">Toys & Games
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <table class="table mb-0">
-                                    <tbody>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home">
-                                                        Educational
-                                                        Toy</a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item"
-                                                        href="toys-games.html#v-pills-profile">Construction Toy
-                                                    </a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0">
-                                                        Board Game</a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="all_product.html">
-                                                        Puzzle Game </a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="all_product.html">
-                                                        Building Blocks
-                                                    </a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6">
-                                                        Sports Toy </a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7">
-                                                        Creative Toy
-                                                    </a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="all_product.html">
-                                                        Baby Toy</a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Outdoor Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a href="all_product.html" class="nav-link">Birthday
-                                Gifts</a></li>
-                        <li class="nav-item"><a href="all_product.html" class="nav-link">All Product
-                            </a></li>
-                    </ul>
-                </div>
-                <div class="col-auto ms-lg-auto mx-auto position-relative">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Search Products/Services" id="Search">
-                        <div class="input-group-text">
-                            <label for="Search">
-                                <i class="fa-solid fa-magnifying-glass"></i>
-                                &nbsp; Search
-                            </label>
-                        </div>
-                    </div>
-                    <!-- search product list -->
-                    <div id="productList">
-                        <div class="product-item"><a href="baby_rattles.html"> Baby Rattles 8 Pcs</a></div>
-                        <div class="product-item"><a href="wooden_table.html">Wooden Table Tennis Trainer</a></div>
-                        <div class="product-item"><a href="frog_tree.html">Frog Tree Balance Game</a></div>
-                        <div class="product-item"><a href="triggle_chess.html">Triggle Chess Game</a></div>
-                        <div class="product-item"><a href="iq_game.html">IQ Game - 120 Challenges</a></div>
-                        <div class="product-item"><a href="memory_chess.html">Memory Chess Game</a></div>
-                        <div class="product-item"><a href="gobble_game.html">Gobble Game</a></div>
-                        <div class="product-item"><a href="otrio_tri-ring.html">Otrio Tri-Ring Strategy Game</a></div>
-                        <div class="product-item"><a href="tic_tac_toe.html">Tic Tac Toe Classic Game</a></div>
-                        <div class="product-item"><a href="montessori_learning.html">2 in 1 Montessori Learning toy</a>
-                        </div>
-                        <div class="product-item"><a href="shape_matching.html">Shape Matching Game</a></div>
-                        <div class="product-item"><a href="alpha_numeric.html">Alpha Numeric Board - 29 Sticks</a></div>
-                        <div class="product-item"><a href="magic_beans.html">Magic Beans Puzzle Spinner Cube</a></div>
-                        <div class="product-item"><a href="infinity_cube.html">Infinity Cube</a></div>
-                        <div class="product-item"><a href="#">Pyramid Cub</a></div>
-                        <div class="product-item"><a href="starlink_educational.html">Starlink Building Blocks 100
-                                Pcs</a></div>
-                        <div class="product-item"><a href="building_blockss.html">Building Block With Wheel 75 Pcs</a>
-                        </div>
-                        <div class="product-item"><a href="#">75 Pcs Building Block With Wheel</a></div>
-                        <!-- <div class="product-item"><a href="bala">Balancing Tower</a></div> -->
-                    </div>
-                    <!-- search product list -->
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- Header end -->
+   
     <!-- offcanvas section start -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
@@ -456,14 +304,14 @@
 
     <!-- snowflake_building end -->
 
- <!-- footer start -->
-   <section class="contact mt-5">
+    <!-- footer start -->
+    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"  loading="lazy"
-                                class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                                loading="lazy" class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
@@ -554,12 +402,30 @@
                         <span class="contact-socialMediaIcon"><a href=" https://www.instagram.com/shipraplayhouse/"><i
                                     class="fa-brands fa-instagram"></i></a></span>
                     </div>
-
                 </div>
                 <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
             </div>
-        </div>
+            <div class="row justify-content-between">
+                <div class="col-auto">
+                    <a href="cancellation.html">Cancellation & Refund Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="privacy_policy.html">Privacy Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                </div>
+                <div class="col-auto">
+
+                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="terms_conditions.html">Terms and Conditions</a>
+                </div>
+            </div>
         </div>
 
     </section>
