--- a/all_product.html
+++ b/all_product.html
@@ -76,8 +76,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Musical Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -120,8 +119,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -391,7 +389,8 @@
                                 <img src="./assets/img/Products img/Edited/F300/education_6.jpeg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title">3 Set of Puzzle Geomatery | Alphabate | Number board puzzle</h5>
+                                    <h5 class="card-title">3 Set of Puzzle Geomatery | Alphabate | Number board puzzle
+                                    </h5>
                                     <p class="card-text">Builds logic, recognition, motor skills, and fun with
                                         alphanumeric blocks.</p>
                                     <h4><b>₹ 349</b></h4>
@@ -518,7 +517,8 @@
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
                                     <h5 class="card-title">Memory Chess Flip & Match Game</h5>
-                                    <p class="card-text">Boosts memory, focus, fun learning with colorful flipping cards.</p>
+                                    <p class="card-text">Boosts memory, focus, fun learning with colorful flipping
+                                        cards.</p>
                                     <h4><b>₹ 349</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="flip_matching_game.html" class="btn btn-primary">Buy Now</a>
@@ -544,7 +544,8 @@
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
                                     <h5 class="card-title">Alpha Numeric Puzzle Game</h5>
-                                    <p class="card-text">Learn letters, numbers with colorful sticks for fun educational play.</p>
+                                    <p class="card-text">Learn letters, numbers with colorful sticks for fun educational
+                                        play.</p>
                                     <h4><b>₹ 249</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="alpha_numeric.html" class="btn btn-primary">Buy Now</a>
@@ -557,7 +558,8 @@
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
                                     <h5 class="card-title">Wooden Russian Blocks Puzzles</h5>
-                                    <p class="card-text">Colorful wooden blocks boost logic, creativity, focus, and fun.</p>
+                                    <p class="card-text">Colorful wooden blocks boost logic, creativity, focus, and fun.
+                                    </p>
                                     <h4><b>₹ 199</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="wooden_russian_blocks.html" class="btn btn-primary">Buy Now</a>
@@ -790,14 +792,14 @@
         </div>
     </div> -->
     <!-- form -->
-    <!-- footer start -->
-   <section class="contact mt-5">
+     <!-- footer start -->
+    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"  loading="lazy"
-                                class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                                loading="lazy" class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
@@ -888,12 +890,30 @@
                         <span class="contact-socialMediaIcon"><a href=" https://www.instagram.com/shipraplayhouse/"><i
                                     class="fa-brands fa-instagram"></i></a></span>
                     </div>
-
                 </div>
                 <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
             </div>
-        </div>
+            <div class="row justify-content-between">
+                <div class="col-auto">
+                    <a href="cancellation.html">Cancellation & Refund Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="privacy_policy.html">Privacy Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                </div>
+                <div class="col-auto">
+
+                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="terms_conditions.html">Terms and Conditions</a>
+                </div>
+            </div>
         </div>
 
     </section>
