--- a/board_game.html
+++ b/board_game.html
@@ -844,14 +844,14 @@
     </div>
     <!-- form -->
     <!-- Board end -->
- <!-- footer start -->
-   <section class="contact mt-5">
+     <!-- footer start -->
+    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"  loading="lazy"
-                                class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                                loading="lazy" class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
@@ -942,12 +942,30 @@
                         <span class="contact-socialMediaIcon"><a href=" https://www.instagram.com/shipraplayhouse/"><i
                                     class="fa-brands fa-instagram"></i></a></span>
                     </div>
-
                 </div>
                 <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
             </div>
-        </div>
+            <div class="row justify-content-between">
+                <div class="col-auto">
+                    <a href="cancellation.html">Cancellation & Refund Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="privacy_policy.html">Privacy Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                </div>
+                <div class="col-auto">
+
+                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="terms_conditions.html">Terms and Conditions</a>
+                </div>
+            </div>
         </div>
 
     </section>
