--- a/cancellation.html
+++ b/cancellation.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo Rebound Tennis Trainer | Shipra Play House</title>
+    <title>Corporate Gifts | Shipra Play House</title>
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/solo_rebound.css">
+    <link rel="stylesheet" href="./assets/css/all_product.css">
 </head>
 
 <body>
@@ -76,8 +76,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Musical Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -120,8 +119,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -237,70 +235,69 @@
         </div>
     </div>
     <!-- offcanvas section end -->
-
-
-    <!-- solo_rebound start -->
-    <section class="solo_rebound">
+    <!-- Cancellation start -->
+    <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Solo Rebound Tennis Trainer</a></b></h2>
+                <div class="col-md-12 pt-5">
+                    <p><b>Cancellation & Refund Policy</b></p>
+                    <i>At <b><a href="www.shipraplayhouse.com">www.shipraplayhouse.com</a></b> your satisfaction is our priority. We aim to make your shopping
+                        experience smooth and worry-free. Please read our Cancellation and Refund Policy carefully
+                        before making a purchase.</i>
+                    <p class="pt-3"><b>1. Order Cancellation</b></p>
+                    <i><b>• Before Shipping:</b></i>
+                    <i>You may cancel your order within <b>12 hours</b> of placing it, or <b>before it has been
+                            shipped</b>.</i><br>
+                    <i class="px-2">To request cancellation, please contact us at [Your Email] or [Phone Number] with
+                        your order
+                        number.</i><br>
+                    <i><b>• After Shipping:</b></i><br>
+                    <i>Once an order is shipped, it cannot be canceled. You may still initiate a return after delivery
+                        (see Return & Refund section).</b>.</i><br>
+                    <p class="pt-3"><b>2. Returns and Refunds</b></p>
+                    <i><b>We accept returns only under the following conditions:</b></i>
+                    <ul>
+                        <li>The product is <b>damaged, defective,</b> or <b>incorrect</b>.</li>
+                        <li>You notify us within <b>48 hours</b> of receiving the product.</li>
+                        <li>The product is <b>unused</b> and in <b>original packaging</b> with all tags intact.</li>
+                    </ul>
+                    <i>To initiate a return, email us at [Your Email] with the following:</i>
+                    <ul>
+                        <li>Order ID</li>
+                        <li>Reason for return</li>
+                        <li>Photos of the item (if damaged or incorrect)</li>
+                    </ul>
+                    <p><b>3. Items Not Eligible for Return</b></p>
+                    <ul>
+                        <li>Used or opened items</li>
+                        <li>Customized or personalized products</li>
+                        <li>Items returned without original packaging</li>
+                        <li>Requests made after the return period (usually <b>7 days</b> from delivery)</li>
+                    </ul> 
+                    <p><b>4. Refund Process</b></p>
+                    <ul>
+                        <li>After we receive and inspect the returned item, we will notify you of the refund status.</li>
+                        <li>If approved, your refund will be processed within <b>5-7 business days</b> to your original payment method.</li>
+                        <li>Shipping charges (if any) are non-refundable unless the return is due to our error.</li>
+                    </ul>
+                    <p class="pt-3"><b>5. Exchange Policy</b></p>
+                    <ul>
+                        <li>We currently do not offer direct exchanges. If you need a different item, please return the original product and place a new order separately.</li>
+                    </ul>
+                    <p class="pt-3"><b>6. Contact Us</b></p>
+                    <i>For questions or help with your order, please contact our support team:</i>
+                    <p class="pt-3"><b>Shipra Play House</b></p>
+                    <i>Email:<a href="care@shipraplayhouse.com"> care@shipraplayhouse.com</a></i><br>
+                    <i><b>Address</b>: Ravet Pune</i>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 pt-4">
-                    <img src="./assets/img/Products img/Edited/F701/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
-                    <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
-                        <img src="./assets/img/Products img/Edited/F701/1.jpg" class="thumb-img active"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F701/2.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F701/3.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <a href="#" role="button" data-bs-toggle="modal" data-bs-target="#youtube1">
-                            <img src="./assets/img/Products img/Edited/F701/4.jpg" class="thumb-img "
-                                onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4 mb-3">
-                        <h4><b>Solo Rebound Tennis Trainer</b></h4>
-                        <h3><b>₹ 199</b></h3>
-                        <span>Free Delivery</span>
-                        <div class="text-center mt-4">
-                            <a href="https://wa.link/hcga11" class="button rounded-1" id="whats-link">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                CONNECT US</a>
-                        </div>
-                    </div>
-                    <div class="border box p-4">
-                        <p>Boost Your Child's Learning Through Play</p>
-                        <p><b> Looking for toys that are both fun and educational?</b></p>
-                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
-                            and
-                            social development.</p>
-                        <ul class="list-unstyled">
-                            <li>✅ High-Quality & Safe Materials</li>
-                            <li>✅ Designed by Experts in Child Development</li>
-                            <li>✅ Perfect for Ages 3+</li>
-                            <li>✅ Encourages Imagination, Focus & Skill-Building</li>
-                        </ul>
-                        <ul class="list-unstyled">
-                            <li><b>🎾 Improves Tennis Skills</b></li>
-                            <li><b>🧠 Enhances Focus & Coordination</b></li>
-                            <li><b>💪 Boosts Physical Fitness</b></li>
-                            <li><b>🚗 Portable with Wheels </b></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
         </div>
+
     </section>
-    <!-- solo_rebound end -->
-   <!-- footer start -->
+    <!-- Cancellation end -->
+
+
+    <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
@@ -438,7 +435,46 @@
             document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
             // Add active to selected
             thumb.classList.add('active');
-        } 
+        } function changeImage1(thumb) {
+            const main = document.getElementById('mainDisplay1');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage2(thumb) {
+            const main = document.getElementById('mainDisplay2');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage3(thumb) {
+            const main = document.getElementById('mainDisplay3');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage4(thumb) {
+            const main = document.getElementById('mainDisplay4');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage5(thumb) {
+            const main = document.getElementById('mainDisplay5');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
     </script>
 </body>
 
