--- a/shipping_delivery.html
+++ b/shipping_delivery.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo Rebound Tennis Trainer | Shipra Play House</title>
+    <title>Corporate Gifts | Shipra Play House</title>
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/solo_rebound.css">
+    <link rel="stylesheet" href="./assets/css/all_product.css">
 </head>
 
 <body>
@@ -76,8 +76,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Musical Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -120,8 +119,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -237,70 +235,76 @@
         </div>
     </div>
     <!-- offcanvas section end -->
-
-
-    <!-- solo_rebound start -->
-    <section class="solo_rebound">
+    <!-- Privacy Policy start -->
+    <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Solo Rebound Tennis Trainer</a></b></h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 pt-4">
-                    <img src="./assets/img/Products img/Edited/F701/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
-                    <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
-                        <img src="./assets/img/Products img/Edited/F701/1.jpg" class="thumb-img active"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F701/2.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F701/3.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <a href="#" role="button" data-bs-toggle="modal" data-bs-target="#youtube1">
-                            <img src="./assets/img/Products img/Edited/F701/4.jpg" class="thumb-img "
-                                onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4 mb-3">
-                        <h4><b>Solo Rebound Tennis Trainer</b></h4>
-                        <h3><b>₹ 199</b></h3>
-                        <span>Free Delivery</span>
-                        <div class="text-center mt-4">
-                            <a href="https://wa.link/hcga11" class="button rounded-1" id="whats-link">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                CONNECT US</a>
-                        </div>
-                    </div>
-                    <div class="border box p-4">
-                        <p>Boost Your Child's Learning Through Play</p>
-                        <p><b> Looking for toys that are both fun and educational?</b></p>
-                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
-                            and
-                            social development.</p>
-                        <ul class="list-unstyled">
-                            <li>✅ High-Quality & Safe Materials</li>
-                            <li>✅ Designed by Experts in Child Development</li>
-                            <li>✅ Perfect for Ages 3+</li>
-                            <li>✅ Encourages Imagination, Focus & Skill-Building</li>
-                        </ul>
-                        <ul class="list-unstyled">
-                            <li><b>🎾 Improves Tennis Skills</b></li>
-                            <li><b>🧠 Enhances Focus & Coordination</b></li>
-                            <li><b>💪 Boosts Physical Fitness</b></li>
-                            <li><b>🚗 Portable with Wheels </b></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                <div class="col-md-12 pt-5">
+                    <p><b>Shipping & Delivery Policy</b></p>
+                    <i>Welcome to <b>Shipra Play House</b> – where creativity meets childhood joy! We are committed to
+                        delivering safe, high-quality toys right to your doorstep with care and efficiency.</i><br>
 
+                    <p class="pt-3"><b>1. Shipping Locations</b></p>
+                    <i>We currently ship across <b>India</b>. If your delivery address is outside our standard coverage
+                        area or in a remote location, our team will contact you to confirm feasibility and
+                        timelines.</i>
+                    <p class="pt-3"><b>2. Order Processing Time</b></p>
+                    <ul>
+                        <li>Orders are processed within <b>1–2 business days</b> after payment confirmation.</li>
+                        <li>Orders placed on Sundays or public holidays will be processed on the next working day.</li>
+                    </ul>
+                    <p><b>3. Estimated Delivery Time</b></p>
+                    <ul>
+                        <li><b>Metro Cities:</b> 3–5 business days</li>
+                        <li><b>Other Locations:</b> 5–7 business days</li>
+                        <li><b>Remote/PIN code-sensitive areas:</b> May take 7–10 business days</li>
+                    </ul>
+                    <i><span>Note: Delays may occur due to weather, festivals, or unforeseen courier issues.</span></i>
+                    <p class="pt-3"><b>4. Shipping Charges</b></p>
+                    <ul>
+                        <li><b>Free Shipping</b> on all orders above ₹[Insert threshold, e.g., ₹999].</li>
+                        <li>• Orders below the threshold may include a nominal shipping charge, visible at checkout.
+                        </li>
+                    </ul>
+                    <p class="pt-3"><b>5. Order Tracking</b></p>
+                    <i>Once your order is shipped, you will receive:</i>
+                    <ul>
+                        <li>A shipping confirmation email or SMS</li>
+                        <li>A tracking ID and courier details</li>
+                        <li>A link to monitor real-time delivery status</li>
+                    </ul>
+                    <i>You can also log in to your <b>Shipra Play House</b> account to view your order status.</i>
+                    <p class="pt-3"><b>6. Packaging & Safety</b></p>
+                    <i>We pack all toys with care using <b>eco-friendly, child-safe, and tamper-proof materials</b> to
+                        ensure that your product reaches you in perfect condition</i>
+                    <p class="pt-3"><b>7. Delivery Partners</b></p>
+                    <i>We partner with trusted logistics services like <b>Delhivery, Bluedart, DTDC, and India Post</b>
+                        to provide timely and safe delivery across the country.</i>
+                    <p class="pt-3"><b>8. Missed or Delayed Deliveries</b></p>
+                    <ul>
+                        <li>If you’re not available at the time of delivery, the courier will attempt to deliver again.
+                        </li>
+                        <li>In case of repeated failed attempts, the package may be returned to us.</li>
+                        <li>If you experience delays, please contact us with your order number for quick assistance.
+                        </li>
+                    </ul>
+                    <p class="pt-3"><b>9. International Shipping</b></p>
+                    <i>At this time, <b>Shipra Play House does not offer international shipping</b>.</i><br>
+                    <i><b>We currently cater only to customers within India.</b></i><br>
+                    <p class="pt-3"><b>10. Need Help?</b></p>
+                    <i>For questions about your shipment or delivery concerns, please contact:</i><br>
+                    <i>Email:<a href="care@shipraplayhouse.com"> care@shipraplayhouse.com</a></i><br>
+                    <i>Phone: <a href="tel:9579613569 ">+91-9579613569 </a></i><br>
+                    <i>Website:<a href=" https://www.shipraplayhouse.com"> https://www.shipraplayhouse.com</a></i>
+                </div>
+            </div>
         </div>
+
     </section>
-    <!-- solo_rebound end -->
-   <!-- footer start -->
+    <!-- Privacy Policy end -->
+
+
+    <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
@@ -438,7 +442,46 @@
             document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
             // Add active to selected
             thumb.classList.add('active');
-        } 
+        } function changeImage1(thumb) {
+            const main = document.getElementById('mainDisplay1');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage2(thumb) {
+            const main = document.getElementById('mainDisplay2');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage3(thumb) {
+            const main = document.getElementById('mainDisplay3');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage4(thumb) {
+            const main = document.getElementById('mainDisplay4');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage5(thumb) {
+            const main = document.getElementById('mainDisplay5');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
     </script>
 </body>
 
