--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo Rebound Tennis Trainer | Shipra Play House</title>
+    <title>Corporate Gifts | Shipra Play House</title>
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/solo_rebound.css">
+    <link rel="stylesheet" href="./assets/css/all_product.css">
 </head>
 
 <body>
@@ -76,8 +76,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Musical Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -120,8 +119,7 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -237,70 +235,105 @@
         </div>
     </div>
     <!-- offcanvas section end -->
-
-
-    <!-- solo_rebound start -->
-    <section class="solo_rebound">
+    <!-- Privacy Policy start -->
+    <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Solo Rebound Tennis Trainer</a></b></h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 pt-4">
-                    <img src="./assets/img/Products img/Edited/F701/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
-                    <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
-                        <img src="./assets/img/Products img/Edited/F701/1.jpg" class="thumb-img active"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F701/2.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F701/3.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <a href="#" role="button" data-bs-toggle="modal" data-bs-target="#youtube1">
-                            <img src="./assets/img/Products img/Edited/F701/4.jpg" class="thumb-img "
-                                onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4 mb-3">
-                        <h4><b>Solo Rebound Tennis Trainer</b></h4>
-                        <h3><b>₹ 199</b></h3>
-                        <span>Free Delivery</span>
-                        <div class="text-center mt-4">
-                            <a href="https://wa.link/hcga11" class="button rounded-1" id="whats-link">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                CONNECT US</a>
-                        </div>
-                    </div>
-                    <div class="border box p-4">
-                        <p>Boost Your Child's Learning Through Play</p>
-                        <p><b> Looking for toys that are both fun and educational?</b></p>
-                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
-                            and
-                            social development.</p>
-                        <ul class="list-unstyled">
-                            <li>✅ High-Quality & Safe Materials</li>
-                            <li>✅ Designed by Experts in Child Development</li>
-                            <li>✅ Perfect for Ages 3+</li>
-                            <li>✅ Encourages Imagination, Focus & Skill-Building</li>
-                        </ul>
-                        <ul class="list-unstyled">
-                            <li><b>🎾 Improves Tennis Skills</b></li>
-                            <li><b>🧠 Enhances Focus & Coordination</b></li>
-                            <li><b>💪 Boosts Physical Fitness</b></li>
-                            <li><b>🚗 Portable with Wheels </b></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                <div class="col-md-12 pt-5">
+                    <p><b>Terms and Conditions </b></p>
+                    <i>Effective Date : 21st July 2025</i><br>
+                    <i>Welcome to <a href="www.shipraplayhouse.com">www.shipraplayhouse.com</a>
+                        By using our website and making a purchase, you agree to the following terms and conditions.
+                        Please read them carefully before placing an order.</i><br>
+                    <i>Here is a professional and clear <b>Terms and Conditions</b> document for a <b>kids' toy-related
+                            eCommerce website. </b>It’s written in simple English to make it easy for customers
+                        (especially parents) to understand, while covering key legal points:</i><br>
 
+                    <p class="pt-3"><b>1. About Us</b></p>
+                    <i><b>Shilpra Play House</b> is an online store that sells toys and educational products for
+                        children. Our mission is to offer high-quality, child-safe, and fun learning products that
+                        parents can trust.</i>
+
+
+                    <p class="pt-3"><b>2. Use of the Website</b></p>
+                    <ul>
+                        <li>You must be at least 18 years old to make purchases on this website.</li>
+                        <li>You agree to provide accurate and complete information when registering or placing an order.
+                        </li>
+                        <li>You are responsible for maintaining the confidentiality of your account and password.</li>
+                    </ul>
+                    <p><b>3. Product Information</b></p>
+                    <ul>
+                        <li>We strive to provide accurate descriptions, images, and prices for all products.</li>
+                        <li>Colors, designs, or sizes may vary slightly due to photography or manufacturer updates.</li>
+                        <li>All products are subject to availability.</li>
+                    </ul>
+                    <p class="pt-3"><b>4. Orders and Payments</b></p>
+                    <ul>
+                        <li>Orders can be placed through our website using valid payment methods such as credit/debit
+                            cards, UPI, or net banking.</li>
+                        <li>All prices are listed in INR and include applicable taxes (unless stated otherwise).</li>
+                        <li>Once your order is placed, you will receive an email confirmation.</li>
+                        <li>We reserve the right to cancel any order for reasons such as out-of-stock items, pricing
+                            errors, or suspected fraud.</li>
+                    </ul>
+                    <p class="pt-3"><b>5. Shipping and Delivery</b></p>
+                    <ul>
+                        <li>We deliver across All over India.</li>
+                        <li>Shipping charges and estimated delivery times will be displayed at checkout.</li>
+                        <li>Delays may occur due to weather, courier issues, or other unforeseen circumstances.</li>
+                    </ul>
+                    <p class="pt-3"><b>6. Returns and Refunds</b></p>
+                    <ul>
+                        <li>We accept returns within 7 days of delivery for unused, unopened items.</li>
+                        <li>Products must be returned in original packaging.</li>
+                        <li>Refunds will be processed within 7 after receiving the returned item.</li>
+                        <li>Customized or used items are <b>non-returnable</b>.</li>
+                        <li>For damaged or wrong items, please contact our support team within 48 hours of delivery.
+                        </li>
+                    </ul>
+                    <p class="pt-3"><b>7. Child Safety</b></p>
+                    <ul>
+                        <li>All toys sold are made with non-toxic, child-safe materials.</li>
+                        <li>Age recommendations are provided for each product.</li>
+                        <li>Adult supervision is recommended, especially for children under 3 years.</li>
+                    </ul>
+                    <p class="pt-3"><b>8. Intellectual Property</b></p>
+                    <ul>
+                        <li>All content on the website (images, text, designs, logos) is the property of [Your Website
+                            Name] or its licensors.</li>
+                        <li>You may not copy, reproduce, or use any content without written permission.</li>
+                    </ul>
+                    <p class="pt-3"><b>9. Limitation of Liability</b></p>
+                    <ul>
+                        <li>We are not liable for any direct, indirect, or accidental damages caused by the use or
+                            misuse of our products.</li>
+                        <li>Always use products as per instructions and under adult supervision.</li>
+                    </ul>
+                    <p class="pt-3"><b>10. Privacy</b></p>
+                    <i>Please refer to our [Privacy Policy] for how we collect, use, and protect your personal
+                        information.</i><br>
+                    <p class="pt-3"><b>11. Changes to Terms</b></p>
+                    <i>We may update these terms from time to time. Any changes will be posted on this page with the
+                        updated date. Continued use of our website means you accept those changes.</i><br>
+
+ <p class="pt-3"><b>12. Governing Law</b></p>
+                    <i>These terms are governed by the laws of [Your Country/State]. Any disputes will be handled by the courts of Maharastra.</i><br>
+                    <p class="pt-3"><b>13. Contact Us</b></p>
+                    <i>For questions or support, please contact:</i><br>
+                    <i><b>Shipra Play house</b></i><br>
+                    <i>Email:<a href="care@shipraplayhouse.com"> care@shipraplayhouse.com</a></i><br>
+                    <i>Phone: <a href="tel:9579613569 ">9579613569</a></i><br>
+                    <i> <b>Address</b> : Ravet Pune</i>
+                </div>
+            </div>
         </div>
+
     </section>
-    <!-- solo_rebound end -->
-   <!-- footer start -->
+    <!-- Privacy Policy end -->
+
+
+    <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
@@ -438,7 +471,46 @@
             document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
             // Add active to selected
             thumb.classList.add('active');
-        } 
+        } function changeImage1(thumb) {
+            const main = document.getElementById('mainDisplay1');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage2(thumb) {
+            const main = document.getElementById('mainDisplay2');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage3(thumb) {
+            const main = document.getElementById('mainDisplay3');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage4(thumb) {
+            const main = document.getElementById('mainDisplay4');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
+        function changeImage5(thumb) {
+            const main = document.getElementById('mainDisplay5');
+            main.src = thumb.src;
+            // Remove active from all
+            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
+            // Add active to selected
+            thumb.classList.add('active');
+        }
     </script>
 </body>
 
