--- a/wholesale/index.html
+++ b/wholesale/index.html
@@ -603,13 +603,13 @@
         </div>
     </div>
     <!-- form -->
-    <!-- footer start -->
+       <!-- footer start -->
     <section class="contact">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="../assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
                                 loading="lazy" class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
@@ -634,24 +634,24 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="toys-games.html#v-pills-settings1">Musical Toy</a> </li>
+                                    <li> <a href="all_product.html">Musical Toy</a> </li>
 
-                                    <li> <a href="toys-games.html#v-pills-settings2"> Puzzle Game </a> </li>
+                                    <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="toys-games.html#v-pills-settings3"> Building Blocks </a> </li>
+                                <li> <a href="all_product.html"> Building Blocks </a> </li>
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
                                 <li> <a href="toys-games.html#v-pills-settings7"> Creative Toy </a></li>
 
-                                <li> <a href="toys-games.html#v-pills-settings8"> Baby Toy</a></li>
+                                <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="toys-games.html#v-pills-settings9">Outdoor Toy</a> </li>
+                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
                             </ul>
                         </div>
                     </div>
@@ -701,12 +701,30 @@
                         <span class="contact-socialMediaIcon"><a href=" https://www.instagram.com/shipraplayhouse/"><i
                                     class="fa-brands fa-instagram"></i></a></span>
                     </div>
-
                 </div>
                 <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
             </div>
-        </div>
+            <div class="row justify-content-between">
+                <div class="col-auto">
+                    <a href="cancellation.html">Cancellation & Refund Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="privacy_policy.html">Privacy Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                </div>
+                <div class="col-auto">
+
+                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                </div>
+                <div class="col-auto">
+
+                    <a href="terms_conditions.html">Terms and Conditions</a>
+                </div>
+            </div>
         </div>
 
     </section>
