--- a/board_game.html
+++ b/board_game.html
@@ -774,18 +774,23 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-lg-6">
-                    <img src="./assets/img/Products img/Edited/F407/1.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay7" loading="lazy">
+                    <img src="./assets/img/Products img/Edited/F703/Shipra Play House Memory Chess Board Game_1.jpeg"
+                        alt="Shipra Play House Memory Chess Board Game" class="img-fluid mainProductImage"
+                        id="mainDisplay7" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
-                        <img src="./assets/img/Products img/Edited/F407/1.jpg" class="thumb-img active"
+                        <img src="./assets/img/Products img/Edited/F703/Shipra Play House Memory Chess Board Game_1.jpeg"
+                            alt="Shipra Play House Memory Chess Board Game" class="thumb-img active"
                             onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F407/2.jpg" class="thumb-img"
+                        <img src="./assets/img/Products img/Edited/F703/Shipra Play House Memory Chess Board Game_2.jpeg"
+                            alt="Shipra Play House Memory Chess Board Game" class="thumb-img"
                             onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F407/5.jpg" class="thumb-img"
+                        <img src="./assets/img/Products img/Edited/F703/Shipra Play House Memory Chess Board Game_3.jpeg"
+                            alt="Shipra Play House Memory Chess Board Game" class="thumb-img"
                             onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F407/6.jpg" class="thumb-img"
+                        <img src="./assets/img/Products img/Edited/F703/Shipra Play House Memory Chess Board Game_4.jpeg"
+                            alt="Shipra Play House Memory Chess Board Game" class="thumb-img"
                             onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
                     </div>
                 </div>
@@ -845,7 +850,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
     </section>
     <!-- form -->
