--- a/building_blockss.html
+++ b/building_blockss.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Building Blocks with Wheel | Shipra Play House</title>
-    <link rel="shortcut icon" href="./assets/img/Shipra Play House Shipra Play House Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/Shipra Play House Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/building_blockss.css">
@@ -178,7 +178,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Shipra Play House Logo.png"
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
                         style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -204,7 +204,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Shipra Play House Logo.png"
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
                         style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -311,7 +311,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/Shipra Play House Shipra Play House Logo.png"
+                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
                                 style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
